fixing preferences styling, removed "Is bee behind proxy" since we lost switch

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,6 +93,8 @@
 
 .shrinkable {
     visibility: hidden;
+    overflow: hidden;
+    height: 0px;
 }
 .shrinkable:disabled {
     transform: scale( 10% ) translateX( 0px );
